# spotify_etl

./: .gitignore  README.md  Spotify_API_explore.ipynb  Spotify_API_functions_check.ipynb  boto3_setup.ipynb  main.py  pyproject.toml  run_local_etl.py  spotify_ingest.py  spotify_tools.py
tmp/: rock_albums.parquet
